--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BRICS Unit Basket v1 – Live TWAP + Candles</title>
+<title>BRICS Unit Basket v1 – TWAP + Candles</title>
 <style>
-body { background:#0b0f14; color:#FFD700; font-family: Arial, sans-serif; padding:20px; }
+body { background:#0b0f14; color:#eaeaea; font-family: Arial; padding:20px; }
 .container { max-width:900px; margin:auto; }
-h1 { text-align:center; color:#FFD700; }
+h1 { text-align:center; }
 .price-box { background:#151a21; padding:20px; border-radius:8px; margin-bottom:20px; }
 .price-box .price { font-size:2em; text-align:center; margin:10px 0; }
 .row { margin:5px 0; font-size:1.1em; }
 #chart { height:400px; margin-top:20px; background:#0b0f14; border-radius:8px; }
-select { margin-top:10px; padding:5px; font-size:1em; background:#151a21; color:#FFD700; border:none; border-radius:4px; }
-.footnote { font-size:0.85em; color:#FFD700; margin-top:20px; line-height:1.4; }
+select { margin-top:10px; padding:5px; font-size:1em; }
+.footnote { font-size:0.85em; color:#aaa; margin-top:20px; line-height:1.4; }
 </style>
 </head>
 <body>
@@ -45,33 +45,34 @@ Timeframe:
 <div id="chart"></div>
 
 <div class="footnote">
-<b>Methodology:</b> Basket v1 = 40% gold, 12% each BRL/RUB/INR/CNY/ZAR; gold in troy oz; server-side 5-second TWAP; chart updates every second; selectable timeframes; last 1000 candles persisted in browser; server provides full historical OHLC.
+<b>Methodology:</b> Basket v1 = 40% gold, 12% each BRL/RUB/INR/CNY/ZAR; gold in troy oz; server-side 5-second TWAP; chart updates every second; selectable timeframes; history persisted across reloads; last 1000 candles per timeframe in browser; server provides full historical OHLC.
 </div>
 </div>
 
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 <script>
-const FEED_URL = "https://YOUR_SERVER_URL/latest.json";  // replace with your server
-const OHLC_URL = "https://YOUR_SERVER_URL/ohlc";          // replace with your server
-const updateInterval = 1000; // 1 second polling
-const MAX_CANDLES = 1000;    // max in-browser candles
+const SERVER_URL = "https://YOUR_RENDER_SERVER_URL"; // Replace with your Render server URL
+const FEED_URL = SERVER_URL + "/latest.json";
+const OHLC_URL = SERVER_URL + "/ohlc";
+const updateInterval = 1000;
+const MAX_CANDLES = 1000;
 
 // ===== Chart Setup =====
 const chartContainer = document.getElementById('chart');
 const chart = LightweightCharts.createChart(chartContainer, {
-    layout: { backgroundColor: '#0b0f14', textColor: '#FFD700' },
+    layout: { backgroundColor: '#0b0f14', textColor: '#eaeaea' },
     grid: { vertLines: { color: '#333' }, horzLines: { color: '#333' } },
     rightPriceScale: { borderColor:'#555' },
     timeScale: { borderColor:'#555', timeVisible:true, secondsVisible:true }
 });
-const candleSeries = chart.addCandlestickSeries({ upColor: '#FFD700', downColor: '#FFA500', borderVisible:false, wickColor: '#FFD700' });
+const candleSeries = chart.addCandlestickSeries({ upColor: '#4bff4b', downColor: '#ff4976', borderVisible:false, wickColor: '#eee' });
 
 // ===== Data storage =====
 let timeframeMin = parseInt(document.getElementById('timeframe').value);
 let candles = [];
 let currentCandle = null;
 
-// Convert seconds to nearest candle time
+// Convert milliseconds to nearest candle time
 function getCandleTime(ts, tf_min) {
     return Math.floor(ts/(tf_min*60))*tf_min*60;
 }
@@ -95,12 +96,14 @@ async function updateTWAP() {
         const d = await res.json();
         const tsUnix = new Date(d.timestamp_utc).getTime()/1000;
 
+        // Update price display
         document.getElementById("unitUsd").innerText = d.unit_usd.toFixed(2);
         document.getElementById("unitGold").innerText = d.unit_gold_grams.toFixed(6);
-        document.getElementById("hundredUsd").innerText = (d.hundred_units_usd).toFixed(2);
+        document.getElementById("hundredUsd").innerText = d.hundred_units_usd.toFixed(2);
         document.getElementById("goldTwap").innerText = d.gold_usd_per_oz_twap.toFixed(2);
         document.getElementById("timestamp").innerText = d.timestamp_utc.replace("T"," ").replace("Z"," UTC");
 
+        // Candlestick logic
         const candleTime = getCandleTime(tsUnix, timeframeMin);
         if(!currentCandle || currentCandle.time !== candleTime){
             if(currentCandle) candles.push(currentCandle);
@@ -125,6 +128,7 @@ async function init() {
     candleSeries.setData(candles);
 
     await loadHistoricalCandles();
+
     updateTWAP();
     setInterval(updateTWAP, updateInterval);
 }
