--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BRICS Unit Basket v1 – TWAP + Candles</title>
+<title>BRICS Unit Basket v1 – TWAP + Persistent Candles</title>
 <style>
 body { background:#0b0f14; color:#eaeaea; font-family: Arial; padding:20px; }
 .container { max-width:900px; margin:auto; }
@@ -51,13 +51,12 @@ Timeframe:
 
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 <script>
-const SERVER_URL = "https://YOUR_RENDER_SERVER_URL"; // Replace with your Render server URL
+const SERVER_URL = "https://b-twap.onrender.com"; // <-- YOUR LIVE RENDER URL
 const FEED_URL = SERVER_URL + "/latest.json";
 const OHLC_URL = SERVER_URL + "/ohlc";
 const updateInterval = 1000;
 const MAX_CANDLES = 1000;
 
-// ===== Chart Setup =====
 const chartContainer = document.getElementById('chart');
 const chart = LightweightCharts.createChart(chartContainer, {
     layout: { backgroundColor: '#0b0f14', textColor: '#eaeaea' },
@@ -67,17 +66,14 @@ const chart = LightweightCharts.createChart(chartContainer, {
 });
 const candleSeries = chart.addCandlestickSeries({ upColor: '#4bff4b', downColor: '#ff4976', borderVisible:false, wickColor: '#eee' });
 
-// ===== Data storage =====
 let timeframeMin = parseInt(document.getElementById('timeframe').value);
 let candles = [];
 let currentCandle = null;
 
-// Convert milliseconds to nearest candle time
 function getCandleTime(ts, tf_min) {
     return Math.floor(ts/(tf_min*60))*tf_min*60;
 }
 
-// Load server-side historical candles
 async function loadHistoricalCandles() {
     try {
         const res = await fetch(`${OHLC_URL}?timeframe=${timeframeMin}&limit=${MAX_CANDLES}`);
@@ -89,21 +85,18 @@ async function loadHistoricalCandles() {
     } catch(e) { console.error("Failed to load historical candles", e); }
 }
 
-// Update TWAP display and candle chart
 async function updateTWAP() {
     try {
         const res = await fetch(FEED_URL);
         const d = await res.json();
         const tsUnix = new Date(d.timestamp_utc).getTime()/1000;
 
-        // Update price display
         document.getElementById("unitUsd").innerText = d.unit_usd.toFixed(2);
         document.getElementById("unitGold").innerText = d.unit_gold_grams.toFixed(6);
         document.getElementById("hundredUsd").innerText = d.hundred_units_usd.toFixed(2);
         document.getElementById("goldTwap").innerText = d.gold_usd_per_oz_twap.toFixed(2);
         document.getElementById("timestamp").innerText = d.timestamp_utc.replace("T"," ").replace("Z"," UTC");
 
-        // Candlestick logic
         const candleTime = getCandleTime(tsUnix, timeframeMin);
         if(!currentCandle || currentCandle.time !== candleTime){
             if(currentCandle) candles.push(currentCandle);
@@ -120,7 +113,6 @@ async function updateTWAP() {
     } catch(e) { console.error("Feed fetch error", e); }
 }
 
-// ===== Initial Load =====
 async function init() {
     candles = JSON.parse(localStorage.getItem("candles_" + timeframeMin)) || [];
     if(candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
