--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <style>
 body { background:#0b0f14; color:#eaeaea; font-family: Arial, sans-serif; padding:20px; }
 .container { max-width:900px; margin:auto; }
-h1 { text-align:center; color:#ffd700; } /* gold header */
+h1 { text-align:center; color:#ffd700; }
 .price-box { background:#151a21; padding:20px; border-radius:8px; margin-bottom:20px; }
-.price-box .price { font-size:2em; text-align:center; margin:10px 0; color:#ffd700; } /* gold price */
+.price-box .price { font-size:2em; text-align:center; margin:10px 0; color:#ffd700; }
 .row { margin:5px 0; font-size:1.1em; }
 #chart { height:400px; margin-top:20px; background:#0b0f14; border-radius:8px; }
 select { margin-top:10px; padding:5px; font-size:1em; }
@@ -71,7 +71,7 @@ let candles = [];
 let currentCandle = null;
 
 function getCandleTime(ts, tf_min) {
-    return Math.floor(ts / (tf_min * 60)) * tf_min * 60;
+    return Math.floor(ts / (tf_min * 60));
 }
 
 async function loadHistoricalCandles() {
@@ -79,23 +79,23 @@ async function loadHistoricalCandles() {
         const res = await fetch(`${OHLC_URL}?timeframe=${timeframeMin}&limit=${MAX_CANDLES}`);
         const data = await res.json();
         candles = data.map(c => ({
-            time: Math.floor(c.time / 1000),
+            time: Math.floor(c.time/1000),
             open: c.open,
             high: c.high,
             low: c.low,
             close: c.close
         }));
         if(candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
-        currentCandle = candles.length ? candles[candles.length-1] : null;
+        currentCandle = candles.length ? {...candles[candles.length-1]} : null;
         candleSeries.setData(candles);
-    } catch(e) { console.error("Failed to load historical candles", e); }
+    } catch(e){ console.error("Failed to load historical candles", e);}
 }
 
 async function updateTWAP() {
     try {
         const res = await fetch(FEED_URL);
         const d = await res.json();
-        const tsUnix = new Date(d.timestamp_utc).getTime() / 1000;
+        const tsUnix = Math.floor(new Date(d.timestamp_utc).getTime()/1000);
 
         document.getElementById("unitUsd").innerText = d.unit_usd.toFixed(2);
         document.getElementById("unitGold").innerText = d.unit_gold_grams.toFixed(6);
@@ -116,7 +116,7 @@ async function updateTWAP() {
             currentCandle.close = d.unit_usd;
             candleSeries.update(currentCandle);
         }
-    } catch(e) { console.error("Feed fetch error", e); }
+    } catch(e){ console.error("Feed fetch error", e);}
 }
 
 async function init() {
@@ -128,11 +128,10 @@ async function init() {
         close: c.close
     }));
     if(candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
-    currentCandle = candles.length ? candles[candles.length-1] : null;
+    currentCandle = candles.length ? {...candles[candles.length-1]} : null;
     candleSeries.setData(candles);
 
     await loadHistoricalCandles();
-
     updateTWAP();
     setInterval(updateTWAP, updateInterval);
 }
